--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
     <main>
         <section id="about" class="section">
             <h2>About</h2>
-            <h2 class="text-4xl font-bold mb-4 text-indigo-700">Hello, I'm Vetrivel Mani T</h2>
-            <p>Versatile Mechanical Engineering graduate turned Software Engineer, combining adaptability, a passion for innovation, and robust problem-solving skills. Eager to contribute to dynamic software engineering projects and tackle challenging roles with enthusiasm and dedication.</p>
-            <div class="hidden-content">
-                <p></p>
+            <p> Dynamic Mechanical Engineering graduate with a passion for coding and innovation. Leveraging a strong foundation in engineering principles and a keen interest in technology to drive creative solutions and contribute effectively to software development projects</p>
+             <div class="hidden-content">
+                 <p>Versatile Mechanical Engineering graduate turned Software Engineer, combining adaptability, a passion for innovation, and robust problem-solving skills. Eager to contribute to dynamic software engineering projects and tackle challenging roles with enthusiasm and dedication.</p>
             </div>
         </section>
 
