--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <h2 class="text-3xl font-bold text-center mb-12 text-indigo-700">RESUME</h2>
             <div class="text-center">
                 <p class="mb-6 text-gray-700">Download and view my resume using the links below:</p>
-                <a href=https://drive.google.com/file/d/1WHlnr2QkwCkWZWOmTd_tN8UwoAxdP4Jc/view?usp=sharing target="_blank" class="bg-indigo-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-indigo-700 transition duration-300">View Resume</a>
+                <a href=https://drive.google.com/file/d/1WHlnr2QkwCkWZWOmTd_tN8UwoAxdP4Jc/view?usp=sharing class="view-resume" target="_blank">View Resume</a>
                 <br class="my-4">
                 </div>
         </div>
