--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
     <section id="projects" class="section">
         <h2>PROJECTS</h2>
         <ul>
+
+            <li>UI/UX designs for the frontend were crafted by <a href="https://vetrivelmanit.github.io/Sri-Kandasamy-Vidyalayam-Higher-Secondary-School-Pappanaickenpatti/" target="_blank" class="text-blue-600 hover:underline">Sri Kandasamy Vidyalayam Higher Secondary School, Pappanaickenpatti - Exam Hall Arrangement</a></li>
             <li>UI/UX designs for the frontend were crafted by <a href="https://www.figma.com/proto/Trz8nmRgeauasaGBnFjoME/Race-Bike-Game?t=GMYSiHxE4iWoeFFj-1" target="_blank" class="text-blue-600 hover:underline">Race-Bike-Game</a></li>
             <li>UI/UX designs for the frontend were crafted by <a href="https://www.figma.com/proto/SQefKwmspENQc0TheNqrBU/Easy-Chat?t=GMYSiHxE4iWoeFFj-1" target="_blank" class="text-blue-600 hover:underline">Trendy_Dress_Store</a></li>
             <li>UI/UX designs for the frontend were crafted by <a href="https://www.figma.com/proto/x4fZFLT9NyKyokBXgOeWrd/Trendy_Dress_Store?t=GMYSiHxE4iWoeFFj-1" target="_blank" class="text-blue-600 hover:underline">Trendy_Dress_Store</a></li>
